syntax = "proto3";
package protocol;
import "header.proto";

message CreateRoomReq {
    ReqHeader header = 1;
}

message CreateRoomAck {
    AckHeader header = 1;
}

message JoinRoomReq {
    ReqHeader header = 1;
}

message JoinRoomAck {
    AckHeader header = 1;
}

message ExitRoomReq {
    ReqHeader header = 1;
}

message ExitRoomAck {
    AckHeader header = 1;
}

message DiscardRoomReq {
    ReqHeader header = 1;
}

message DiscardRoomAck {
    AckHeader header = 1;
}

service RoomService {
    rpc CreateRoom(CreateRoomReq) returns (CreateRoomAck) {
    }
    rpc JoinRoom(JoinRoomReq) returns (JoinRoomAck) {
    }
    rpc ExitRoom(ExitRoomReq) returns (ExitRoomAck) {
    }
    rpc DiscardRoom(DiscardRoomReq) returns (DiscardRoomAck) {
    }
}