syntax = "proto3";
package protocol;
import "header.proto";

message KickPlayerReq {
    int64  userId = 1;
    string reason = 2;
}

// 当集群中某一台服务器挂掉时 转移用户到另一台服务器
message AddPlayerReq {
    int64 userId = 1;
}
